CHANGES
=======

v2.0.1
------

* changelog
* update settings

v2.0.0
------

* changelog
* meta
* update Dockerfile and lock file
* remove deprecated app and update bookmarklet
* bump django-burl version to get management commands
* change activation of django\_extensions
* remove erroneous Pipfile entry
* update Pipfile.lock
* fix logging config
* update README and tests
* use BriefURLDefaultRedirect for default site redirect
* update admin settings
* update conf
* enable sites framework
* update paths to match django\_burl
* add v2 api
* bump cfitall version
* update settings to use cfitall
* update to django4 and update dependencies
* upgrade to django 3
* remove tests from (unused) redirects module and added deprecation notice
* restore hastily removed files
* embeds django-burl
* last commit before v2
* add pyproject.toml
* Bump django from 2.2.22 to 2.2.25
* Bump urllib3 from 1.26.4 to 1.26.5
* improvements for working with jwt more securely
* remove garbage
* fix swagger and add jwt
* add filter support, update libs, minor refactor

v1.0.0
------

* minor fixes
* prep for release
* update README
* update README and add LICENSE
* update README and SENDGRID\_API\_SETTING
* enable swagger and various user management things
* minor cleanup & major build improvements
* add blacklist validator to serializer (& test)
* test and refactor
* fix some obvious scaling issues
* use a burl field instead of deriving from object id
* remove stale settings modules
* remove README.md in favor of rst
* rename to burl, many other little changes
* override Redirect.save() to handle blacklisted hashids
* minor reorgs
* initial commit