@@ -8,12 +8,11 @@ requires-python = >=3.6
 home-page = https://github.com/wryfi/burl
 classifier =
     Environment :: Web Environment
-    Framework :: Django :: 2.1
+    Framework :: Django
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Topic :: Internet
     Topic :: Internet :: WWW/HTTP
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
