@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* upgrade to cfitall v2 and add github workflow
+
 v2.0.1
 ------
 
